# sinsy

./: .gitignore  .gitmodules  AUTHORS  README.md
.github/workflows/: ccpp.yaml
dic/: japanese.shift_jis.conf
include/: sinsy.h
lib/converter/: ConfGroup.cpp  ConfGroup.h  ConfManager.h  IConvertable.h  PhonemeInfo.cpp  UnknownConf.h
lib/hts_engine_API/: HtsEngine.cpp
lib/japanese/: JConf.h
lib/label/: ILabelOutput.h  INoteLabel.h  LabelMaker.h  LabelStrings.cpp  NoteGroup.h  NoteLabeler.cpp  PhonemeLabeler.cpp  PhonemeLabeler.h
lib/score/: Mode.h  Pitch.h  Slur.h
lib/temporary/: ScoreDoctor.cpp
lib/util/: IWritableStream.h  InputFile.cpp  InputFile.h  OutputFile.h  PhonemeTable.cpp  PhonemeTable.h  util_log.h  util_string.h
lib/xml/: XmlData.h  XmlParser.h
src/: CMakeLists.txt  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  configure.ac  sinsy.pc.in
src/dic/: Makefile.am  japanese.euc_jp.conf  japanese.euc_jp.table  japanese.shift_jis.table  japanese.utf_8.conf  japanese.utf_8.table
src/include/: sinsy.h
src/include/sinsy/: LabelStrings.h  sinsy.h
src/lib/: Makefile.am  Sinsy.cpp
src/lib/converter/: ConfGroup.cpp  ConfGroup.h  ConfManager.cpp  ConfManager.h  Converter.cpp  Converter.h  IConf.h  IConvertable.h  PhonemeInfo.cpp  PhonemeInfo.h  UnknownConf.cpp  UnknownConf.h  util_converter.cpp  util_converter.h
src/lib/hts_engine_API/: HtsEngine.cpp  HtsEngine.h  SynthConditionImpl.cpp  SynthConditionImpl.h
src/lib/japanese/: JConf.cpp  JConf.h
src/lib/label/: ILabelOutput.h  INoteLabel.h  IPhonemeLabel.h  ISyllableLabel.h  LabelData.cpp  LabelData.h  LabelMaker.cpp  LabelMaker.h  LabelMeasure.cpp  LabelMeasure.h  LabelPosition.cpp  LabelPosition.h  LabelStream.cpp  LabelStream.h  LabelStrings.cpp  LabelStrings.h  NoteGroup.cpp  NoteGroup.h  NoteLabeler.cpp  NoteLabeler.h  PhonemeLabeler.cpp  PhonemeLabeler.h  SyllableLabeler.cpp  SyllableLabeler.h
src/lib/score/: Beat.cpp  Beat.h  Dynamics.cpp  Dynamics.h  IScoreWritable.h  IScoreWriter.h  Key.cpp  Key.h  Mode.cpp  Mode.h  Note.cpp  Note.h  Pitch.cpp  Pitch.h  ScorePosition.cpp  ScorePosition.h  Slur.cpp  Slur.h  Syllabic.cpp  Syllabic.h  util_score.cpp  util_score.h
src/lib/temporary/: ScoreDoctor.cpp  ScoreDoctor.h  TempScore.cpp  TempScore.h
src/lib/util/: Configurations.cpp  Configurations.h  Deleter.h  DiphthongConverter.cpp  DiphthongConverter.h  ForEachAdapter.h  IReadableStream.h  IStringable.cpp  IStringable.h  IWritableStream.h  InputFile.cpp  InputFile.h  MacronTable.cpp  MacronTable.h  MultibyteCharRange.cpp  MultibyteCharRange.h  OutputFile.cpp  OutputFile.h  PhonemeTable.cpp  PhonemeTable.h  StreamException.h  StringTokenizer.cpp  StringTokenizer.h  WritableStrStream.h  util_log.h  util_string.cpp  util_string.h  util_types.h
src/lib/xml/: XmlData.cpp  XmlData.h  XmlParser.cpp  XmlParser.h  XmlReader.cpp  XmlReader.h  XmlWriter.cpp  XmlWriter.h  xml_tags.h
