EXTRA_DIST = AUTHORS COPYING ChangeLog INSTALL NEWS README

SUBDIRS = lib bin dic

include_HEADERS = include/sinsy.h

DISTCLEANFILES = *.log *.out *~ config/*~ include/*~

MAINTAINERCLEANFILES = aclocal.m4 configure Makefile.in config/compile \
                       config/config.guess config/config.sub config/depcomp \
                       config/install-sh config/missing
